# hw14_yamr

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
include/: functions.h  map_reduce.h
tests/: CMakeLists.txt  test.cpp
